option java_outer_classname = "LCConfigForNode";

option java_package = "com.navinfo.opentsp.platform.location.protocol.nodecluster.common";


message ConfigForNode{
	repeated	int64	nodeCode	=1;
}

